--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,11 @@
         "format": "vendor/bin/pint"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin-laravel": true,
+            "pestphp/pest-plugin": true
+        }
     },
     "extra": {
         "laravel": {
